typescript/checker/tests/conformance/es6/templates/templateStringInDivision.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            8,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringInDivision.ts:1:9
  |
1 | var x = `abc${ 1 }def` / 1;
  |         ^^^^^^^^^^^^^^

